Exptended resume; changed 'about me' picture

--- a/src/index.html
+++ b/src/index.html
@@ -123,15 +123,15 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/about/dimi_small.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/about/02_dimi_small.jpg" class="img-responsive img-circle" alt="">
                         <h4>Dimitrios Dentsas</h4>
                         <p class="text-muted">Software Engineer</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/hype3ion"><i class="fa fa-twitter"></i></a>
+                            <li><a href="https://twitter.com/hype3ion" target="blank"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://github.com/dentsads"><i class="fa fa-github"></i></a>
+                            <li><a href="https://github.com/dentsads" target="blank"><i class="fa fa-github"></i></a>
                             </li>
-                            <li><a href="https://www.linkedin.com/in/dimitriosdentsas"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="https://www.linkedin.com/in/dimitriosdentsas" target="blank"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -151,14 +151,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                     <p class="large text-muted">Dimitrios Dentsas is a Software Engineer at Robert Bosch GmbH who specialises in service-oriented architectures and web-based application systems.
-			He took an active role in the conception and development of a configuration management strategy at Bosch's Gasoline Systems Transmission Control business unit.
-		   </p>
-			<p class="large text-muted">In addition he collaboratively published research articles on the topics of Web Service Composition and Scientific Workflow Systems
-			at the IEEE International Conference on e-Science and the International Conference on Web Engineering.
-			</p>
-			<p class="large text-muted">His background is in software development, with a diploma (Dipl.-Inf.) in Computer Science from the University of Stuttgart and prior experience at 				leading automation technology supplier Festo AG & Co. KG.
-			</p>
+                    <p class="large text-muted">Dimitrios Dentsas is a Software Engineer at Robert Bosch GmbH who specialises in service-oriented architectures and web-based application systems.
+            			  He took an active role in the conception and development of a configuration management strategy at Bosch's Gasoline Systems Transmission Control business unit.
+            		    </p>
+              			<p class="large text-muted">In addition he collaboratively published research articles on the topics of Web Service Composition and Scientific Workflow Systems
+              			at the IEEE International Conference on e-Science and the International Conference on Web Engineering.
+              			</p>
+              			<p class="large text-muted">His background is in software development, with a diploma (Dipl.-Inf.) in Computer Science from the University of Stuttgart and prior experience at 				leading automation technology supplier Festo AG & Co. KG.
+              			</p>
                 </div>
             </div>
         </div>
@@ -236,18 +236,39 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <a href="https://www.bosch-si.com/de/iot-plattform/iot-plattform/iot-plattform.html" target="blank"><img class="img-circle img-responsive" src="img/resume/bic-logo-web.jpg" alt=""></a>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>August 2016 - Present</h4>
+                                    <h4 class="subheading">Robert Bosch GmbH</h4>
+                                    <h4 class="subheading">Software Test Engineer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                    DevOps evangelist, Continuous Delivery practicioner and test automation expert for the Bosch IoT Cloud.
+                                    Trying to make cloudy dreams come true!
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
                         <li>
                             <div class="timeline-image">
                                 <a href="http://www.bosch.de/en/de/our_company_1/business_sectors_and_divisions_1/gasoline_systems_1/gasoline-systems.html" target="blank"><img class="img-circle img-responsive" src="img/resume/bosch.jpg" alt=""></a>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>October 2012 - Present</h4>
+                                    <h4>October 2012 - July 2016</h4>
                                     <h4 class="subheading">Robert Bosch GmbH</h4>
                                     <h4 class="subheading">Software Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"></p>
+                                    <p class="text-muted">
+                                    Increasing engineering and developer productivity at Bosch's Gasoline Systems Transmission Control business unit.
+                                    Conception and development of a configuration management strategy for customer project software as well as development tools.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -262,7 +283,11 @@
                                     <h5 class="subheading">Diploma (Dipl.-Inf.), Computer Science</h5>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"></p>
+                                    <p class="text-muted">
+                                      In my diploma thesis I developed a human communication framework that implements Communication Flows in a pipes-and-filters architecture and supports both notifications and request-response interactions.
+                                      The concept of Human Communication Flows specifies best practices about how a scientific workflow can interact with a human user.
+                                      See <a href="http://www.iaas.uni-stuttgart.de/RUS-data/INPROC-2012-39%20-%20Integration%20of%20Human%20Users.pdf" target="blank">this paper</a> for more information.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -365,11 +390,11 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://twitter.com/hype3ion"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/hype3ion" target="blank"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="https://github.com/dentsads"><i class="fa fa-github"></i></a>
+                        <li><a href="https://github.com/dentsads" target="blank"><i class="fa fa-github"></i></a>
                         </li>
-                        <li><a href="https://www.linkedin.com/in/dimitriosdentsas"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/in/dimitriosdentsas" target="blank"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
